Fix missing line break of long package commit messages
Before we would render long commit messages in one line, which
means that at a certain length users would have to use a horizontal
scrollbar.

Fixes #5954

--- a/src/api/app/assets/stylesheets/webui2/comments.scss
+++ b/src/api/app/assets/stylesheets/webui2/comments.scss
@@ -3,6 +3,7 @@
     pre {
       @extend .p-2;
       @extend .bg-light;
+      @extend .text-pre-wrap;
     }
   }
 }
